--- a/index.html
+++ b/index.html
@@ -1,1 +1,12 @@
-Hello World
+<html>
+  <head>
+    <title>Ryan Mcconkey's Github site</title>
+  </head>
+  
+  <body>
+    <hr>
+    <h1>Site Under development</h1>
+    <p>This site is currenlt under development.</p>
+  </body>
+  
+</html>
