centered index.html
Updated index.html , centered page.

--- a/index.html
+++ b/index.html
@@ -4,9 +4,12 @@
   </head>
   
   <body>
+    <center>
     <hr>
     <h1>Site Under development</h1>
     <p>This site is currenlt under development.</p>
+    <hr>
+    </center>
   </body>
   
 </html>
