--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
   <body>
     <center>
     <hr>
-    <h1>Site Under development</h1>
-    <p>This site is currenlt under development.</p>
+    <h1>Site under development</h1>
+    <p>This site is currently under development.</p>
     <hr>
     </center>
   </body>
