Added background-color inline CSS for the body

--- a/cv/index.html
+++ b/cv/index.html
@@ -5,9 +5,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Ryan Mcconkey's Site</title>
 </head>
-<body>
+<body style="background-color: #EAF6F6;">
     <hr>
-    <table cellspacing="20px">
+    <table cellspacing="10px">
       <tr>
         <td>
             <img src="images/profile-icon.png" alt="Ryan's profile picture" height="150" width="150">
