--- a/cv/contact-me.html
+++ b/cv/contact-me.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Contact Me</title>
 </head>
-<body>
+<body style="background-color: #EAF6F6;">
     
     <h1>My Contact Info</h1>
     <p>Email: ryanmcconkey404@gmail.com</p>
@@ -19,7 +19,7 @@
         <input type="email" name="mail"> <br>
         Message: <br>
         <textarea name="comment" id="" cols="30" rows="10" wrap="soft"></textarea>
-        <!-- <input type="text" name="comment" size="50"> --> <br><br>
+        <br><br>
 
         <input type="submit" value="Send">
         <input type="reset" value="Reset">
