--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
     <div class="top-container">
         <img class="top-cloud" src="images/cloud.png">
         <h1>I'm Ryan.</h1>
-        <h2>a Computer Science student.</h2>
+        <h2>a Computer Science Enthusiast.</h2>
         <img class="bottom-cloud" src="images/cloud.png">
         <img src="images/mountain.png">
     </div>
@@ -49,7 +49,7 @@
         <div class="profile">
             <img class="profile-img" src="images/circle-me2020.png" alt="">
             <h2>Hello.</h2>
-            <p>I am Ryan Mcconkey, an aspiring Computer Science student. I have a great ambition to become a professional Software Engineer. I started to use Linux at the age of 14, which is about ten years ago now.
+            <p>I am Ryan Mcconkey, an aspiring Computer Science enthusiast. I have a great ambition to become a professional Software Engineer. I started to use Linux at the age of 14, which is about ten years ago now.
             </p>
 
             <p>
