--- a/index.html
+++ b/index.html
@@ -39,8 +39,8 @@
 
     <div class="top-container">
         <img class="top-cloud" src="images/cloud.png">
-        <h1>I'm Ryan.</h1>
-        <h2>a Computer Science Enthusiast.</h2>
+        <h1>I'm Ryan</h1>
+        <h2>a Computer Science Enthusiast</h2>
         <img class="bottom-cloud" src="images/cloud.png">
         <img src="images/mountain.png">
     </div>
@@ -58,12 +58,12 @@
         </div>
         <hr>
         <div class="skills">
-            <h2 style="padding-top: 100px;">My Skills.</h2>
+            <h2 style="padding-top: 100px;">My Skills</h2>
             <div class="skill-row">
                 <img class="code-img" src="images/computer.png" alt="">
                 <h3>Linux & Web Development</h3>
-                <p>Self taught experience in modern web technologies such as html5, CSS, and ES6.  </p>
-                <p>Self taught experience in Linux System Administration such as bash shell scripting, automated tasks using cron jobs, hardening with firewalld and iptables, and LVM.
+                <p>Self taught experience in modern web technologies such as HTML5, CSS, and ES6.  </p>
+                <p>Self taught experience in Linux System Administration such as bash shell scripting, automating tasks using cron jobs and hardening with firewalld and iptables.
                 </p>
             </div>
             <div class="skill-row">
@@ -82,7 +82,7 @@
     </div>
     <hr>
     <div class="contact-me">
-        <h2>Get In Touch</h2>
+        <h2>Get in touch</h2>
         <h3>Contact Information</h3>
         <p class="contact-message">Please click the button below to send me an email.</p>
         <a class="btn" href="mailto:ryanmcconkey404@gmail.com">CONTACT ME</a>
@@ -97,7 +97,8 @@
     <div class="bottom-container">
         <a class="footer-link" href="https://my.indeed.com/p/ryanm-a31idvm">Indeed Resume</a>
         <a class="footer-link" href="https://twitter.com/ryanmcpython">Twitter</a>
-        <a class="footer-link" href="https://ryanm404.github.io">Website</a>
+        <a class="footer-link" href="https://github.com/ryanm404">Github</a>
+        <a class="footer-link" href="https://github.com/ryanm404/GoCoronaVirusAPIParser">Golang COVID-19 Project</a>
         <p>© 2020 Ryan Mcconkey.</p>
     </div>
 
