--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Merriweather&family=Montserrat&family=Sacramento&display=swap" rel="stylesheet">
 
     <script src="https://canvasjs.com/assets/script/canvasjs.min.js"></script>
+    <!-- Javascript function for chart display
     <script type="text/javascript">
         window.onload = function() {
             var chart = new CanvasJS.Chart("chartContainer", {
@@ -32,6 +33,7 @@
             chart.render();
         }
     </script>
+    -->
 
 </head>
 
